--- a/src/styles/abstract/_reset.scss
+++ b/src/styles/abstract/_reset.scss
@@ -1,4 +1,6 @@
 * {
+    color: unset;
+    background-color: unset;
     margin: 0;
     padding: 0;
     box-sizing: unset;
@@ -6,36 +8,34 @@
     border: 0 none;
     vertical-align: baseline;
     font-size: unset;
-}
-
-html, body {
+  }
+  
+  html, body {
     min-height: 100vh;
-}
-
-body, div, header, main, footer, nav {
+  }
+  
+  body, div, header, main, footer, nav {
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-}
-
-img, video {
+  }
+  
+  img, video {
     height: auto;
     max-width: 100%;
-}
-
-ol, ul {
+  }
+  
+  ol, ul {
     list-style: none;
-}
-
-h1, h2, h3, h4, h5, h6, p, span, a {
-    font-size: 100%;
-    font-weight: normal;
-}
-
-a, i {
-    color: unset;
-    font-weight: unset;
+  }
+  
+  a {
     text-decoration: none;
     font-style: normal;
-}
+  }
+  
+  h1, h2, h3, h4, h5, h6, p, span, a {
+    font-size: 100%;
+    font-weight: normal;
+  }/*# sourceMappingURL=reset.css.map */
