--- a/src/components/footer/_style.scss
+++ b/src/components/footer/_style.scss
@@ -19,3 +19,9 @@
 		font-weight: lighter;
 	}
 }
+
+@media (prefers-color-scheme: light) {
+	.footer {
+		background-color: $light-grey-color;
+	}
+}
