--- a/src/styles/abstract/_var.scss
+++ b/src/styles/abstract/_var.scss
@@ -3,13 +3,11 @@ $primary-font: 'Ubuntu', sans-serif;
 $primary-font-size: large;
 
 //Color
-$primary-color: #4700D8;
-$secondary-color: #9900F0;
-$tertiary-color: #F900BF;
-$quaternary-color: #FF85B3;
+$primary-accent-color: #9500ff;
+$secondary-accent-color: #ea00ff;
 $dark-color: #1a1a1a;
 $dark-grey-color: #333333;
-$light-grey-color: #505050;
+$light-grey-color: #aaaaaa;
 $light-color: #eeeeee;
 
 //Social colors
