--- a/src/components/button/_style.scss
+++ b/src/components/button/_style.scss
@@ -13,7 +13,7 @@
     cursor: pointer;
 
     &:hover, &:focus {
-        color: $dark-color;
+        color: $light-color;
         background-color: $light-color;
         text-shadow: 1px 1px 10px $light-color;
 	    box-shadow: 0 0 2px 0 $dark-color;
@@ -68,5 +68,11 @@
 @media screen and (max-width: 600px) {
     .big {
         flex: 0 1 100%;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    .button {
+        color: $dark-color;
     }
 }
