--- a/src/components/header/_style.scss
+++ b/src/components/header/_style.scss
@@ -17,24 +17,6 @@
     }
 }
 
-.pageTitle {
-    background-color: $primary-color;
-    width: auto;
-    height: 20vh;
-	padding: 10vh;
-    padding-top: 30%;
-	position: relative;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-    margin: 0;
-    z-index: 8;
-	display: flexbox;
-    align-items: center;
-    justify-content: space-between;
-}
-
 .avatar {
     background-color: #ffffff;
     position: relative;
@@ -73,5 +55,12 @@
 
     .title {
         font-size: 2rem;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    .header {
+        background-color: $light-color;
+        background-image:  linear-gradient($light-grey-color 1px, transparent 1px), linear-gradient(to right, $light-grey-color 1px, $light-color 1px);
     }
 }
