--- a/src/styles/abstract/_base.scss
+++ b/src/styles/abstract/_base.scss
@@ -21,39 +21,20 @@ h3 {font-size: 1.5em; font-weight: bold;}
 h4 {font-size: 1.3em; font-weight: bold;}
 
 a {
-    color: $tertiary-color;
+    color: $primary-accent-color;
     transition: 1s;
 
     &:hover {
-        color: $quaternary-color;
+        color: $secondary-accent-color;
         text-shadow: 0 0 20px #ffffff82;
         text-decoration: underline;
     }
 }
 
-/*
-.text-fx {
-    background-image: linear-gradient(
-        -90deg,
-        $secondary-color 0%,
-        $tertiary-color 29%,
-        $quaternary-color 67%,
-        $secondary-color 100%
-    );
-    background-size: auto auto;
-    background-clip: border-box;
-    background-size: 200% auto;
-    background-clip: text;
-    text-fill-color: transparent;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: textclip 2s linear infinite;
-    display: inline-block;
-}
-
-@keyframes textclip {
-    to {
-        background-position: 200% center;
+@media (prefers-color-scheme: light) {
+    body {
+        // Color scheme
+        color: $dark-color;
+        background-color: $light-color;
     }
 }
- */
