--- a/src/components/header/_style.scss
+++ b/src/components/header/_style.scss
@@ -4,7 +4,7 @@
     background-color: $dark-color;
     background-image:  linear-gradient($dark-grey-color 1px, transparent 1px), linear-gradient(to right, $dark-grey-color 1px, $dark-color 1px);
     background-size: 20px 20px;
-    height: 60vh;
+    min-height: 60vh;
     padding: 10vw;
     z-index: 8;
     display: flex;
@@ -14,6 +14,10 @@
 
     div {
         margin: 10px;
+    }
+
+    h1 {
+        color: $primary-accent-color;
     }
 }
 
