Add CV-Creator to portfolio

--- a/src/styles/abstract/_var.scss
+++ b/src/styles/abstract/_var.scss
@@ -4,6 +4,7 @@ $primary-font-size: large;
 
 //Color
 $primary-accent-color: #9500ff;
+$teste-color: #7800ce;
 $secondary-accent-color: #ea00ff;
 $dark-color: #1a1a1a;
 $dark-grey-color: #333333;
