--- a/src/components/button/_style.scss
+++ b/src/components/button/_style.scss
@@ -27,6 +27,30 @@
     flex: 0 1 20%;
 }
 
+@media screen and (max-width: 1000px) {
+    .big {
+        flex: 0 1 35%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .big {
+        flex: 0 1 100%;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    .button {
+        color: $dark-color;
+        border: 2px solid $dark-color;
+
+        &:hover, &:focus {
+            color: $light-color;
+            background-color: $dark-color;
+        }
+    }
+}
+
 .accent {
     border: 2px solid $primary-accent-color;
 
@@ -64,27 +88,5 @@
 
     &:hover, &:focus {
         background-color: $cv-color;
-    }
-}
-
-@media screen and (max-width: 1000px) {
-    .big {
-        flex: 0 1 35%;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .big {
-        flex: 0 1 100%;
-    }
-}
-
-@media (prefers-color-scheme: light) {
-    .button {
-        color: $dark-color;
-
-        &:hover, &:focus {
-            color: $light-color;
-        }
     }
 }
