--- a/src/components/card/_style.scss
+++ b/src/components/card/_style.scss
@@ -2,7 +2,6 @@
 @import "../../styles/abstract/mixin";
 
 .card {
-    color: $light-color;
 	background-color: $dark-grey-color;
     border-radius: $border-radius;
     position: relative;
@@ -13,6 +12,9 @@
 	transition: 1s;
 
     .card-thumb {
+        width: 100%;
+        height: 100%;
+        
         img {
             width: 100%;
             height: 100%;
@@ -21,7 +23,7 @@
     }
 
     &:hover {
-        box-shadow: 0 0 100px #ffffff5a;
+        box-shadow: 0 0 100px rgba($light-color, 0.3);
         scale: 1.05;
 
         .card-caption {
@@ -31,7 +33,7 @@
 
     .card-caption {
         @include acrylic();
-        background-color: rgba($primary-accent-color, 0.2);
+        background-color: rgba($primary-accent-color, 0.6);
         position: absolute;
         top: 0;
         left: 0;
@@ -40,7 +42,7 @@
         display: flex;
         flex-direction: column;
 
-        transition: all 0.5s ease;
+        transition: all 1s ease;
         opacity: 0;
 
         h4 {
@@ -58,14 +60,6 @@
             justify-content: space-evenly;
         }
     }
-
-    .button {
-        color: $light-color;
-
-        &:hover, &:focus {
-            color: $dark-color;
-        }
-    }
 }
 
 @media screen and (max-width: 1000px) {
@@ -77,5 +71,13 @@
 @media screen and (max-width: 600px) {
     .card {
         flex: 0 1 100%;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    .card {
+        &:hover {
+            box-shadow: 0 0 100px rgba($dark-color, 0.8);
+        }
     }
 }
