--- a/src/components/navbar/_style.scss
+++ b/src/components/navbar/_style.scss
@@ -14,8 +14,8 @@
 	display: flex;
   	align-items: center;
 	border-radius: $border-radius;
-	border: 1px solid #ffffff46;
-	box-shadow: 0 0 10px #ffffff41;
+	border: 1px solid rgba($light-color, 0.3);
+	box-shadow: 0 0 10px rgba($light-color, 0.3);
 	@include acrylic();
 
 	.nav-item {
@@ -28,6 +28,7 @@
 		cursor: pointer;
 
 		&:hover, &:focus {
+			scale: 1.1;
 			text-shadow: 1px 1px 10px $light-color;
 		}
 	}
@@ -50,6 +51,8 @@
 	.navbar {
 		color: $light-color;
 		background-color: rgba($dark-color, 0.5);
+		border: 1px solid rgba($dark-color, 0.3);
+		box-shadow: 0 0 10px rgba($dark-color, 0.3);
 
 		.nav-item {
 			color: $light-color;
