Visual changes and translation options

--- a/src/components/card/_style.scss
+++ b/src/components/card/_style.scss
@@ -1,5 +1,5 @@
-@import "../../styles/abstract/var";
-@import "../../styles/abstract/mixin";
+@import "../../style/abstract/var";
+@import "../../style/abstract/mixin";
 
 .card {
 	background-color: $dark-grey-color;
