--- a/src/style/abstract/_var.scss
+++ b/src/style/abstract/_var.scss
@@ -4,11 +4,10 @@ $primary-font-size: large;
 
 //Color
 $primary-accent-color: #9500ff;
-$teste-color: #7800ce;
 $secondary-accent-color: #ea00ff;
 $dark-color: #1a1a1a;
 $dark-grey-color: #333333;
-$light-grey-color: #aaaaaa;
+$light-grey-color: #dddddd;
 $light-color: #eeeeee;
 
 //Social colors
