Add React Router for pagination. New portfolio section.

--- a/src/style/abstract/_base.scss
+++ b/src/style/abstract/_base.scss
@@ -74,6 +74,10 @@ a {
     flex-direction: column;
 }
 
+.flex-center {
+    align-items: center;
+}
+
 @media (prefers-color-scheme: light) {
     body {
         // Color scheme
