--- a/src/components/card/_style.scss
+++ b/src/components/card/_style.scss
@@ -56,8 +56,9 @@
 
         .card-opt {
             margin-top: auto;
+            display: flex;
+            flex-direction: row;
             flex-flow: wrap;
-            justify-content: space-evenly;
         }
     }
 }
