--- a/src/style/abstract/_var.scss
+++ b/src/style/abstract/_var.scss
@@ -6,8 +6,8 @@ $primary-font-size: large;
 $primary-accent-color: #4a01ff;
 $secondary-accent-color: #d04cff;
 $tertiary-accent-color: #ff4197;
-$dark-color: #1a1a1a;
-$dark-grey-color: #333333;
+$dark-color: #0e0e0e;
+$dark-grey-color: #222222;
 $light-grey-color: #dddddd;
 $light-color: #eeeeee;
 
