chore!: start porting app to next.js: remove vite files and packages and next.js setup

--- a/src/style/_style.scss
+++ b/src/style/_style.scss
@@ -8,3 +8,13 @@
 @import "./abstract/var";
 
 @import "./abstract/base";
+
+.content {
+    padding: 5vw;
+
+    section {
+        padding: 4vw;
+        padding-top: 15vw;
+        padding-bottom: 15vw;
+    }
+}
